--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -5,12 +5,20 @@
  */
 
 header {
-  padding: 154px 0 100px;
+  padding: 0 0 70px;
+  width: 100vw;
+}
+
+.top-header {
+  background-image: url("../../public/images/top-image4.jpg");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  height: 80vh; */
 }
 
 @media (min-width: 992px) {
   header {
-    padding: 156px 0 100px;
+    padding: 0 0 10px;
   }
 }
 
