--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -4,16 +4,110 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-scrolling-nav/blob/master/LICENSE)
  */
 
+body {
+  font-family: 'Raleway', sans-serif;
+}
+
 header {
-  padding: 0 0 70px;
+  padding: 0;
   width: 100vw;
+  height: 410px;
+}
+
+header::after {
+  content: "";
+  background-image: url("../../public/images/top-image6.png");
+  background-size: 100% 100%;
+  width: 100vw;
+  height: 295px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  opacity: 1.0;
+  z-index: 1;
+}
+
+h1 {
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 50px;
+  font-weight: 600;
+}
+
+h2 {
+  font-family: 'Anton', sans-serif;
+  font-size: 40px;
+}
+
+h3{
+  font-family: 'Raleway', sans-serif;
+  font-size: 30px;
+  font-weight: 800;
+}
+
+
+.accent-bar {
+  background-color: #587297;
+  height: 10px;
+  width: 50px;
+}
+
+.icon {
+  width: 100px;
+  height: 100px;
+  margin: 15px;
+}
+
+.contact-button {
+  width: 50px;
+  height: 50px;
+  margin: 10px;
+}
+
+.contact-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.my-photo {
+  position: relative;
+  width: 200px;
+  z-index: 2;
+  padding: 0;
+}
+
+.name-section {
+  padding: 10px 0 20px 0;
+  height: 130px;
+}
+
+.resume-text {
+  color: #587297;
+  font-size: 20px;
+  font-weight: 800;
+  margin-top: 20px;
+}
+
+.section-header {
+  padding-bottom: 30px;
+  padding-left: 0px;
+}
+
+.skill-list {
+  border: 5px solid black;
+  border-radius: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 20px;
 }
 
 .top-header {
-  background-image: url("../../public/images/top-image4.jpg");
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  height: 80vh; */
+  position: relative;
+  width: 100vw;
+  top: 193px;
 }
 
 @media (min-width: 992px) {
@@ -24,4 +118,8 @@ header {
 
 section {
   padding: 150px 0;
+}
+
+.portfolio-item {
+  margin-bottom: 30px;
 }
