Add Captcha and New Resume
Began implementing captcha when user tries to email. Also updated
site with newest resume (1.19.19).

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -4,26 +4,22 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-scrolling-nav/blob/master/LICENSE)
  */
 body {
-  font-family: "Raleway", sans-serif;
-}
+  font-family: 'Raleway', sans-serif; }
 
 div.about-container {
   opacity: 0;
-  transition: 1s;
+  transition: 1.0s;
   position: relative;
-  left: -300px;
-}
+  left: -300px; }
 div.accent-bar {
   background-color: #587297;
   height: 10px;
-  width: 50px;
-}
+  width: 50px; }
 div.contact-header {
   left: -300px;
   opacity: 0;
   position: relative;
-  transition: 1s;
-}
+  transition: 1.0s; }
 div.contact-list {
   display: flex;
   flex-direction: row;
@@ -31,8 +27,7 @@ div.contact-list {
   left: 300px;
   opacity: 0;
   position: relative;
-  transition: 1s;
-}
+  transition: 1.0s; }
 div.encourage-div {
   background-image: url("../../public/images/encourage-screen-static.gif");
   background-size: 100% 200px;
@@ -41,54 +36,47 @@ div.encourage-div {
   height: 200px;
   transition: 0.1s;
   width: 100%;
-  z-index: 1000;
-}
-div.encourage-div:hover {
-  background-image: url("../../public/images/encourage-screen.gif");
-}
+  z-index: 1000; }
+  div.encourage-div:hover {
+    background-image: url("../../public/images/encourage-screen.gif"); }
 div.name-section {
   padding: 10px 0 20px 0;
-  height: 130px;
-}
+  height: 130px; }
 div.projects1 {
   position: relative;
   opacity: 0;
-  transition: 1s;
-}
+  transition: 1.0s; }
 div.projects2 {
   position: relative;
   top: -10px;
   opacity: 0;
-  transition: 1s;
-}
+  transition: 1.0s; }
 div.projects3 {
   position: relative;
   left: -300px;
   opacity: 0;
-  transition: 1s;
-}
+  transition: 1.0s; }
 div.projects4 {
   position: relative;
   left: 300px;
   opacity: 0;
-  transition: 1s;
-}
+  transition: 1.0s; }
 div.projects5 {
   position: relative;
   left: -300px;
   opacity: 0;
-  transition: 1s;
-}
+  transition: 1.0s; }
 div.projects6 {
   position: relative;
   left: 300px;
   opacity: 0;
-  transition: 1s;
-}
+  transition: 1.0s; }
+div.recaptcha-div {
+  display: flex;
+  justify-content: center; }
 div.section-header {
   padding-bottom: 30px;
-  padding-left: 0px;
-}
+  padding-left: 0px; }
 div.simon-div {
   background-image: url("../../public/images/simon-screen-static2.gif");
   background-size: 100% 200px;
@@ -97,17 +85,14 @@ div.simon-div {
   height: 200px;
   transition: 0.1s;
   width: 100%;
-  z-index: 1000;
-}
-div.simon-div:hover {
-  background-image: url("../../public/images/simon-screen2.gif");
-}
+  z-index: 1000; }
+  div.simon-div:hover {
+    background-image: url("../../public/images/simon-screen2.gif"); }
 div.skills-header {
   left: -300px;
   opacity: 0;
   position: relative;
-  transition: 1s;
-}
+  transition: 1.0s; }
 div.skills-list {
   border: 5px solid black;
   border-radius: 50px;
@@ -118,8 +103,7 @@ div.skills-list {
   opacity: 0;
   padding: 20px;
   position: relative;
-  transition: 1s;
-}
+  transition: 1.0s; }
 div.tic-tac-toe-div {
   background-image: url("../../public/images/tic-tac-toe-screen-static.gif");
   background-size: 100% 200px;
@@ -128,89 +112,73 @@ div.tic-tac-toe-div {
   height: 200px;
   transition: 0.1s;
   width: 100%;
-  z-index: 1000;
-}
-div.tic-tac-toe-div:hover {
-  background-image: url("../../public/images/tic-tac-toe-screen.gif");
-}
+  z-index: 1000; }
+  div.tic-tac-toe-div:hover {
+    background-image: url("../../public/images/tic-tac-toe-screen.gif"); }
 div.top-header {
   position: relative;
   width: 100vw;
-  top: 193px;
-}
+  top: 193px; }
 
 h1 {
-  font-family: "Nunito Sans", sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   font-size: 50px;
-  font-weight: 600;
-}
+  font-weight: 600; }
 
 h2 {
-  font-family: "Anton", sans-serif;
-  font-size: 40px;
-}
+  font-family: 'Anton', sans-serif;
+  font-size: 40px; }
 
 h3 {
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 30px;
-  font-weight: 800;
-}
+  font-weight: 800; }
 
 header {
   padding: 0;
   width: 100vw;
-  height: 410px;
-}
-header:after {
-  content: "";
-  background-image: url("../../public/images/top-image6.png");
-  background-size: 100% 100%;
-  width: 100vw;
-  height: 295px;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  opacity: 1;
-  z-index: 1;
-}
+  height: 410px; }
+  header:after {
+    content: "";
+    background-image: url("../../public/images/top-image6.png");
+    background-size: 100% 100%;
+    width: 100vw;
+    height: 295px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    opacity: 1.0;
+    z-index: 1; }
 
 img.contact-button {
   width: 50px;
   height: 50px;
-  margin: 10px;
-}
+  margin: 10px; }
 img.icon {
   width: 100px;
   height: 100px;
-  margin: 15px;
-}
+  margin: 15px; }
 img.my-photo {
   position: relative;
   width: 200px;
   z-index: 2;
-  padding: 0;
-}
+  padding: 0; }
 
 p.resume-text {
   color: #587297;
   font-size: 20px;
   font-weight: 800;
-  margin-top: 20px;
-}
+  margin-top: 20px; }
 
 @media (min-width: 992px) {
   header {
-    padding: 0 0 10px;
-  }
-}
+    padding: 0 0 10px; } }
 section {
-  padding: 150px 0;
-}
+  padding: 150px 0; }
 
 .portfolio-item {
-  margin-bottom: 30px;
-}
+  margin-bottom: 30px; }
 
 /*# sourceMappingURL=main.css.map */
