--- a/assets/styles/sass.scss
+++ b/assets/styles/sass.scss
@@ -100,6 +100,11 @@ div {
     transition: 1.0s;
   }
 
+  &.recaptcha-div {
+    display: flex;
+    justify-content: center;
+  }
+
   &.section-header {
     padding-bottom: 30px;
     padding-left: 0px;
